[package]
name = "lume-lsp"
version = "0.1.1"
rust-version = "1.88.0"
edition = "2024"

[dependencies]
arc = { git = "https://github.com/lume-lang/lume" }
lume_driver = { git = "https://github.com/lume-lang/lume", default-features = false }
lume_errors = { git = "https://github.com/lume-lang/lume" }
lume_parser = { git = "https://github.com/lume-lang/lume" }
lume_session = { git = "https://github.com/lume-lang/lume" }
lume_span = { git = "https://github.com/lume-lang/lume" }

clap = { version = "=4.5.41", features = ["derive"] }
error_snippet = { version = "=0.1.16" }
log = { version = "=0.4.27" }
lsp-server = { version = "=0.7.8" }
lsp-types = { version = "=0.94.1" }
serde = { version = "=1.0.219" }
serde_json = { version = "=1.0.140" }
simple-logging = { version = "=2.0.2" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
wildcard_imports = "allow"
